# climatology

./: .gitignore  .nojekyll  404.html  Dockerfile  NOAA-CO-OPS-Climatology.html  NOAA-CO-OPS-data.html  NOAA-CO-OPS-plots.html  NOAA-CO-OPS-plots.ipynb  NOAA-CO-OPS-records.html  NOAA-CO-OPS-records.ipynb  README.md  _quarto.yml  about.html  acknowledgements.html  acknowledgements.qmd  camelize.py  climoDL.py  data.html  data.qmd  docker-compose.yml  footer.html  howto.html  howto.qmd  index.html  index.qmd  listings.json  methods.html  methods.qmd  pyclimo.py  requirements.txt  robots.txt  search.json  sitemap.xml  stations.json
_bayStLouisMs/: metadata.yml  statistics-daily.nc  statistics-monthly.nc  trend-waterlevel.html
_beaufortNc/: metadata.yml  statistics-daily.nc  statistics-monthly.nc  trend-waterlevel.html
_demos/: NOAA-CO-OPS-plots.ipynb  NOAA-CO-OPS-records.ipynb
_lewesDe/: metadata.yml  statistics-daily.nc  statistics-monthly.nc  trend-waterlevel.html
_naplesFl/: metadata.yml
_newportRi/: metadata.yml  statistics-daily.nc  statistics-monthly.nc  trend-waterlevel.html
_site/: NOAA-CO-OPS-Climatology.html  NOAA-CO-OPS-plots.html  NOAA-CO-OPS-records.html  about.html  acknowledgements.html  data.html  howto.html  index.html  methods.html  search.json  sitemap.xml
_virginiaKeyFl/: bmcnoldy-data.csv  metadata.yml  statistics-daily.nc  statistics-monthly.nc  trend-waterlevel.html
_woodsHoleMa/: metadata.yml  statistics-daily.nc  (+2 more)
clipy/: README.md  climo.py  plot.py  pyproject.toml
clipy/clipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+132 files in other folders)
